fix: greetings horizontal spacing

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -116,7 +116,7 @@ header > h1 {
 }
 header > p {
     flex: 1 0 100%;
-    padding: 0 2rem;
+    padding: 0 clamp(1rem, calc(16 / 1500 * 100vw), 2rem);
     font-size: 2.5rem;
     line-height: 4.35rem;
     letter-spacing: -.03em;
